--- a/src/otp-component/OTPComponent.css
+++ b/src/otp-component/OTPComponent.css
@@ -1,49 +1,68 @@
 .otp-component-main{
-    margin: 1rem;
-    height: 30vh;
-    width: 25vw;
-    background-color: rgb(176, 194, 232);
-
-    border-radius: 2rem;
-    box-shadow: 10px 10px 5px rgba(176, 194, 232, 0.397);
+    width: 700px;
+    height: 300px;
+    flex-shrink: 0;
 
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
+
+    border-radius: 20px;
+    background: #6D6BC2;
+    box-shadow: 4px 4px 10px 2px rgba(0, 0, 0, 0.25);
 }
 
 .otp-component-input-wrapper{
-    width: 80%;
-    height: 60%;
-    align-items: center;
+    width: 400px;
+    height: 150px;
+    flex-shrink: 0;
 
-    background-color: rgb(153, 168, 201);
-
-    border-radius: 2rem;
+    border-radius: 20px;
+    background: #8887D9;
 
     align-items: center;
     display: flex;
     justify-content: center;
     flex-direction: row;
-}
-
-.otp-component-input-input-wrapper{
-    width: 20%;
-    height: 80%;
-
-    background-color: rgb(136, 149, 179);
-
-    border-radius: 2rem;
-    align-items: center;
-    display: flex;
-    justify-content: center;
+    gap: 15px;
 }
 
 .otp-component-input-input{
-    border-radius: 2rem;
-    width: 100%;
-    height: 100%;
+    width: 69px;
+    height: 115px;
+    flex-shrink: 0;
 
-    font-size: 4rem;
+    border-radius: 20px;
+    border: 2px solid #6D6BC2;
+    background: #D4D3EF;
+
+    font-size: 46px;
     text-align: center;
+    color: #3C3D56;
+}
+
+.otp-component-submit-button{
+    width: 259px;
+    height: 42px;
+    flex-shrink: 0;
+
+    border-radius: 20px;
+    background: #7EBC68;
+
+    color: #FFF;
+    text-align: center;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.otp-component-title{
+    color: #FFF;
+    text-align: center;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
