--- a/src/otp-component/OTPComponent.css
+++ b/src/otp-component/OTPComponent.css
@@ -1,8 +1,12 @@
-.otp-component-main{
+.dt-otp-component-main{
     width: 700px;
     height: 300px;
     flex-shrink: 0;
+}
 
+.dt-otp-component-main-wrapper{
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -13,7 +17,7 @@
     box-shadow: 4px 4px 10px 2px rgba(0, 0, 0, 0.25);
 }
 
-.otp-component-input-wrapper{
+.dt-otp-component-input-wrapper{
     width: 400px;
     height: 150px;
     flex-shrink: 0;
@@ -28,7 +32,7 @@
     gap: 15px;
 }
 
-.otp-component-input-input{
+.dt-otp-component-input-input{
     width: 69px;
     height: 115px;
     flex-shrink: 0;
@@ -42,7 +46,7 @@
     color: #3C3D56;
 }
 
-.otp-component-submit-button{
+.dt-otp-component-submit-button{
     width: 259px;
     height: 42px;
     flex-shrink: 0;
@@ -58,7 +62,30 @@
     line-height: normal;
 }
 
-.otp-component-title{
+.dt-otp-component-submit-button:hover{
+    background-color: #659653;
+    /* color: #cacaca; */
+    transition: 0.7;
+}
+
+.dt-otp-component-submit-button:focus{
+    background-color: #659653;
+    /* color: #cacaca; */
+    transition: 0.7;
+    border: 1px solid rgb(150, 222, 124);
+}
+
+.dt-otp-component-submit-button:active{
+    background-color: #88b15a;
+
+
+    -webkit-box-shadow: inset 1px 1px 5px #33333359;
+    -moz-box-shadow:    inset 1px 1px 5px #33333359;
+    box-shadow:         inset 1px 1px 5px #33333359;
+    transition: 0.7;
+}
+
+.dt-otp-component-title{
     color: #FFF;
     text-align: center;
     font-size: 32px;
