--- a/src/utilities/SuccessComponent/SuccessComponent.css
+++ b/src/utilities/SuccessComponent/SuccessComponent.css
@@ -1,15 +1,14 @@
-.dt-loading-component{
+.dt-success-component{
     width: 100%;
     height: 100%;
 
     border-radius: 20px;
-    background: #6D6BC2;
+    background: #61C58F;
     box-shadow: 4px 4px 10px 2px rgba(0, 0, 0, 0.25);
-
+    
     color: #FFF;
-
     text-align: center;
-    font-size: 32px;
+    font-size: 64px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
