--- a/src/otp-component/OTPComponent.css
+++ b/src/otp-component/OTPComponent.css
@@ -93,3 +93,80 @@
     font-weight: 700;
     line-height: normal;
 }
+
+.flippable-card-container{
+    height: 500px;
+    width: 300px;
+
+    perspective: 1000px;
+
+}
+
+.card{
+    height: 100%;
+    width: 100%;
+
+    border-radius: 5px;
+    border: 5px solid white;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.8);
+
+    position: relative;
+    transform-style: preserve-3d;
+}
+
+.flip-exit{
+    transform: rotateY(0deg);
+}
+
+.flip-exit-active{
+    transform: rotateY(180deg);
+    transition: transform 300ms;
+    transition-timing-function: cubic-bezier(0.57, 0.21, 0.69, 1.25);
+}
+
+.flip-exit-done{
+    transform: rotateY(180deg);
+}
+
+.flip-enter{
+    transform: rotateY(180deg);
+}
+
+.flip-enter-active{
+    transform: rotateY(0deg);
+    transition: transform 300ms;
+    transition-timing-function: cubic-bezier(0.57, 0.21, 0.69, 1.25);
+}
+
+.flip-enter-done{
+    transform: rotateY(0deg);
+}
+
+
+
+.card-front, .card-back{
+    height: 100%;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-weight: 800;
+    font-size: 60px;
+    color: white;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.9);
+
+    position:absolute;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.card-front{
+    background-color: #73d0ff;
+}
+
+.card-back{
+    background-color: #ffad66;
+    transform: rotateY(180deg);
+}
