--- a/src/otp-component/OTPComponent.css
+++ b/src/otp-component/OTPComponent.css
@@ -15,6 +15,8 @@
     border-radius: 20px;
     background: #6D6BC2;
     box-shadow: 4px 4px 10px 2px rgba(0, 0, 0, 0.25);
+
+    perspective: 1000px;
 }
 
 .dt-otp-component-input-wrapper{
@@ -106,9 +108,9 @@
     height: 100%;
     width: 100%;
 
-    border-radius: 5px;
+    /* border-radius: 5px;
     border: 5px solid white;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.8);
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.8); */
 
     position: relative;
     transform-style: preserve-3d;
@@ -120,7 +122,7 @@
 
 .flip-exit-active{
     transform: rotateY(180deg);
-    transition: transform 300ms;
+    transition: transform 1000ms;
     transition-timing-function: cubic-bezier(0.57, 0.21, 0.69, 1.25);
 }
 
@@ -134,15 +136,13 @@
 
 .flip-enter-active{
     transform: rotateY(0deg);
-    transition: transform 300ms;
+    transition: transform 1000ms;
     transition-timing-function: cubic-bezier(0.57, 0.21, 0.69, 1.25);
 }
 
 .flip-enter-done{
     transform: rotateY(0deg);
 }
-
-
 
 .card-front, .card-back{
     height: 100%;
@@ -154,8 +154,12 @@
 
     font-weight: 800;
     font-size: 60px;
-    color: white;
-    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.9);
+    /* color: white; */
+    /* text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.9); */
+
+    border-radius: 20px;
+    /* background: #6D6BC2; */
+    box-shadow: 4px 4px 10px 2px rgba(0, 0, 0, 0.25);
 
     position:absolute;
     -webkit-backface-visibility: hidden;
@@ -163,10 +167,10 @@
 }
 
 .card-front{
-    background-color: #73d0ff;
+    background: #8887D9;
 }
 
 .card-back{
-    background-color: #ffad66;
+    background: #6D6BC2;
     transform: rotateY(180deg);
 }
