still creating table

--- a/src/create-table-component/CreateTableComponent.css
+++ b/src/create-table-component/CreateTableComponent.css
@@ -15,3 +15,33 @@
     height: 40px;
     font-size: 24px;
 }
+
+.table-header-row{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.table-header-cell-container{
+    height: 50px;
+    width: 200px;
+
+    background-color: #575AA1;
+    border-radius: 20px;
+    box-shadow: 4px 4px 10px 2px rgba(0, 0, 0, 0.25);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.table-header-cell-item{
+    color: #FFF;
+    text-align: center;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
